# CPPPlaygound

./: .gitignore  AlgosAndDatastructures.sln  AlgosAndDatastructures.vcxproj  AlgosAndDatastructures.vcxproj.filters  CMakeLists.txt  Header.h  README.md  build.sh  conanfile.py  main.cpp
Advanced_CPP_Topics/: CMakeLists.txt  Readme.md
Advanced_CPP_Topics/Concurrency/: CMakeLists.txt  background_thread.cpp  multithreaded_calcs.cpp
Advanced_CPP_Topics/Perfect_Forwarding/: CMakeLists.txt  perfect_forwarding.cpp
Advanced_CPP_Topics/RAII/: CMakeLists.txt  main.cpp  smart_ptr.h
Advanced_CPP_Topics/concurrency/: CMakeLists.txt  (+4 more)
Algorithms/: CMakeLists.txt
Algorithms/Array/: ArrayTests.cpp  CMakeLists.txt  ContainsDuplicate.h  FourSum.h  IsRectangle.h  IsRectangleTests.cpp  Kadane.h  MediumArrayAlgorithms.h  SubarraySum.h  ThreeSum.h  TrappingWater.h
Algorithms/Array/include/: ContainsDuplicate.h  Kadane.h  ThreeSum.h  TrappingWater.h
Algorithms/BST/: BSTAlgorithms.h
Algorithms/Backtracking/: BacktrackingTests.cpp  CMakeLists.txt  NumTiles.h  QueensProblem.h  Sudoku.h  TowersOfHanoi.h  main.cpp
Algorithms/BinarySearch/: BSAlgorithms.cpp  BinarySearch.h  BinarySearchHelpers.h  BinarySearchTemplate2.h  BinarySearchTemplate3.h  BinarySearchTests.cpp  CMakeLists.txt
Algorithms/DivideAndConquer/: BSAlgorithms.h  MergeSort.h  QuickSort.h
Algorithms/DynamicProgramming/: CMakeLists.txt  EasyDPAlgos.h  EasyDPTests.cpp  Fibonacci.cpp  Knapsack.cpp  Knapsack.h  MediumDPTests.cpp  MultiStageGraph.h  NumCombinations.h  PalindromeDP.h
Algorithms/GeneralAlgorithms/: DailyProblems.h  MediumArrayAlgorithms.h  StringAlgorithms.h
Algorithms/Graph/: CMakeLists.txt  CycleAlgorithms.h  DFS.h  GraphAlgorithmTests.cpp  GraphTests.cpp  MSTAlgorithms.h  ShortestPathAlgorithms.h  UnionFind.h
Algorithms/GreedyAlgorithms/: GreedyAlgorithmTests.cpp  MediumGreedyAlgorithms.h  SimpleGreedyAlgorithms.h
Algorithms/LinkedList/: CMakeLists.txt  LinkedListAlgorithms.h  LinkedListTests.cpp
Algorithms/Recursion/: CMakeLists.txt  Fibonacci.h  FibonacciTests.cpp
Algorithms/SlidingWindow/: CMakeLists.txt
Algorithms/SlidingWindow/include/: EasySlidingWindow.h  HardSlidingWindow.h  MediumSlidingWindow.h  SlidingWindowEasy.h
Algorithms/Sorting/: BubbleSort.h  HeapSort.h  Helpers.h  InsertionSort.h  MergeSort.h  QuickSort.h  SortingAlgorithms.h  SortingTests.cpp
Algorithms/Strings/: CMakeLists.txt  MultiplyStrings.h  ReverseWordsInAString.h  StringAlgorithmTests.cpp  StringAlgorithms.h  StringTests.cpp
Algorithms/SubsetSum/: SubsetSumAlgorithms.h
Algorithms/Tests/: BacktrackingTests.cpp  DailyProblemTests.cpp  DivideAndConquer.cpp  DivideAndConquerTests.cpp  EasyDPTests.cpp  GraphTests.cpp  GreedyAlgorithmTests.cpp  MediumArrayAlgoTests.cpp  MediumDPTests.cpp  SimpleArrayAlgoTests.cpp  SortingTests.cpp  StringAlgorithmTests.cpp  StringTests.cpp  SubsetSumAlgorithmTests.cpp
Algorithms/Tree/: CMakeLists.txt  TraversalAlgorithms.h
Algorithms/TwoPointers/: CMakeLists.txt
Algorithms/TwoPointers/include/: MediumTwoPointer.h
AlgorithmsAndDatastructures.xcodeproj/: project.pbxproj
AlgosAndDatastructures/: AlgosAndDatastructures.sln
Benchmarking/: CMakeLists.txt  ScopedTimer.h
DataStructures/: BinarySearchTree.h  CMakeLists.txt  CircularQueue.h  HashSet.h  LinkedList.h  Queue.h  QueueStructure.h  Stack.h
DataStructures/BST/: BSTAlgorithms.h  BasicBSTAlgorithms.h  BinarySearchTree.h  MediumBSTAlgorithms.h  Tree.h
DataStructures/CircularQueues/: CircularQueue.h  CircularQueueTests.cpp
DataStructures/Graph/: CMakeLists.txt  Graph.h
DataStructures/Graph/include/: Graph.h
DataStructures/Graphs/: CycleAlgorithms.h  Graph.h  GraphAlgorithms.h  GraphBFSAlgorithms.h  GraphConnectionAlgorithms.h  GraphDFSAlgos.h  GraphIslandAlgos.h  MSTAlgorithms.h  ShortestPathAlgorithms.h
DataStructures/Hash/: HashSet.h
DataStructures/Heap/: MedianHeap.h
DataStructures/LRUCache/: LRUCache.h
DataStructures/LinkedList/: LinkedList.h  LinkedListAlgorithms.h
DataStructures/Queues/: CMakeLists.txt  CircularDeque.h  CircularQueueTests.cpp  QueueStructure.h
DataStructures/Stack_Queue/: Queue.h  Stack.h
DataStructures/Tests/: BSTTests.cpp  GraphTests.cpp  HashTests.cpp  LRUCacheTests.cpp  LinkedListTests.cpp  StackQueueTests.cpp
DataStructures/Tree/: CMakeLists.txt  Node.cpp  Node.h
DataStructures/Tree/include/: BST.h  Node.h
DataStructures/Tree/include/Tree/: Node.h
DataStructures/Tree/src/: BST.cpp
DataStructures/Trees/: BSTAlgorithms.h  BinarySearchTree.h
GeneralCPP/: CMakeLists.txt
GeneralCPP/DesignPatterns/Creational/: AbstractFactory.h  AbstractFactoryTests.cpp  CMakeLists.txt  Singleton.h
PokerHands/: CMakeLists.txt  OptimizedPokerHandAnalyzer.h  PokerHandAnalyzer.h  PokerHandAnalyzerTests.cpp  PokerHandBase.h  PokerHandHelpers.h  PokerHandTests.cpp  poker_hand.cpp  poker_hand.h  poker_hand_base.h
Practice/: CMakeLists.txt  basic_char.h  deep_copy.h  notes.txt  polymorphism.h  user.cpp  user.h
Practice/Tests/: BasicCharTests.cpp  BigIntTests.cpp  UserTests.cpp
Profiling/: CMakeLists.txt  MicroBenchmarkTest.h  OptimizedPokerHandAnalyzer.h  PokerHandAnalyzer.h  PokerHandAnalyzerTests.cpp  PreVsPostCrement.h  ScopedTimer.h  main.cpp
Profiling/Examples/: CMakeLists.txt  MicroBenchmarkTest.h  ModuloImprovements.h  main.cpp  vector_tests.cpp
Strings/: SimpleStringAlgorithms.h
Tests/: CMakeLists.txt
Tests/Algorithms/Array/: CMakeLists.txt  SubarraySumTests.cpp  ThreeSumTests.cpp  TrappingWaterTests.cpp
Tests/Algorithms/Backtracking/: BacktrackingTests.cpp  CMakeLists.txt
Tests/Algorithms/SlidingWindow/: CMakeLists.txt  EasySlidingWindowTests.cpp  HardSlidingWindowTests.cpp  MediumSlidingWindowTests.cpp
Tests/Datastructures/: BSTTests.cpp  CMakeLists.txt  CircularQueueTests.cpp  HashTests.cpp  LRUCacheTests.cpp  LinkedListTests.cpp  StackQueueTests.cpp
Tests/Datastructures/Tree/: CMakeLists.txt  NodeTests.cpp
conan_profiles/: Linux.profile
include/: Header.h
interview_questions/: BigInt.h  CMakeLists.txt  Tests.cpp
practice/: CMakeLists.txt  main.cpp
(+70 files in other folders)
